# new_repo

./: BATTLEPLAN.md  CMakeLists.txt  README.md  main.cc
include/backend/: course.hpp  file_parser.h
include/user_interface/: command_line_interface.hpp
misc/: battle_plan.txt  meower.txt
src/backend/: course.cpp  course.hpp  file_parser.cc
src/user_interface/: command_line_interface.cpp
